# trading

./: .gitignore  README.md  main.py  pyproject.toml
Context/: Polygon Data Descrepancies  SPLIT_ADJUSTMENT_BRAINSTORM.md  TickerEvents.md
Databento/: databento.py  databento_preparation.py  symbology.py  unpack.py
Features/: preparation.py
Polygon/: async_requests.py  cleaning.py  exploring_data_quality.ipynb  paths.py  polygonS3.py  polygon_datetime.py  polygon_namechange.py  utils.py
Polygon/Context/: OHCLV_data_quality.md
Polygon/Name Change Events/: polygon_name_change_events.py  polygon_namechange.py  polygon_symbol_mapping.py  testing.py
Polygon/Reference Data/: reference_data.py
Polygon/Split Events/: polygon_split_mapping.py  polygon_splits.py  testing.py
Polygon/Splits/: polygon_splits.py
Polygon/Ticker Change Events/: polygon_name_change_events.py  polygon_symbol_mapping.py  testing.py
Polygon/Ticker_Change_Events/: polygon_name_change_events.py  polygon_symbol_mapping.py  testing.py
Strategies/dividend_cuts/: computstat_exploration.ipynb  crsp_cleaning.py  crsp_exploration.ipynb  dividends_exploration.ipynb
TWS API/C++ Implementation/: CMakeLists.txt  README.md
TWS API/C++ Implementation/include/: Common.h  Logger.h  OrderManager.h  PortfolioManager.h  TradingClient.h
TWS API/C++ Implementation/src/: Logger.cpp  OrderManager.cpp  PortfolioManager.cpp  TradingClient.cpp  main.cpp
WRDS/: compustat.py  compustat_bulk_download.py  crsp.py  crsp_bulk_download.py  crsp_compustat_link.py  data_exploration.ipynb  taq.py  testing.ipynb  ticker_symbol_conventions_compustat.md
WRDS/compustat/: compustat_bulk_download.py  compustat_fields_utility.py  computstat_co_info.py
WRDS/crsp/: crsp_bulk_download.py  crsp_distribution_events.py
WRDS/taq/: taq.py  taq_scale_test.py
docs/apis/: polygon_splits_api.md
docs/context/: ticker_symbol_conventions_compustat.md
notebooks/exploration/: computstat_exploration.ipynb  crsp_exploration.ipynb  polygon_data_quality.ipynb
scripts/data/: pull_crsp.py
src/bearplanes/: __init__.py
src/bearplanes/data/: __init__.py
src/bearplanes/data/databento/: databento_preparation.py  test_client.py  unpack.py
src/bearplanes/data/polygon/: __init__.py  cleaning.py  client.py  utils.py
src/bearplanes/data/polygon/reference/: __init__.py  reference_data.py
src/bearplanes/data/polygon/split_events/: __init__.py  polygon_splits.py
src/bearplanes/data/polygon/ticker_change_events/: __init__.py  polygon_name_change_events.py  polygon_symbol_mapping.py
src/bearplanes/data/wrds/: __init__.py  client.py
src/bearplanes/data/wrds/compustat/: __init__.py  company_info.py  crsp_compustat_link.py  downloader.py  fields.py  key_developments.py
src/bearplanes/data/wrds/crsp/: __init__.py  crsp_compustat_link.py  distributions.py  downloader.py  info_downloader.py  query_string_enum.py
src/bearplanes/data/wrds/taq/: __init__.py  downloader.py  taq_scale_test.py
src/bearplanes/features/: __init__.py
src/bearplanes/features/OHLCV_bar_based/technical/: atr.py  bolingerbands.py  volume.py
src/bearplanes/features/technical/: atr.py  bolingerbands.py  volume.py
src/bearplanes/labeling/: label_generation.py
src/bearplanes/strategies/dividend_cuts/: __init__.py  crsp_cleaning.py  crsp_exploration.ipynb
src/bearplanes/strategies/dividend_cuts/analysis/: __init__.py  returns.py
src/bearplanes/strategies/dividend_cuts/dividend/: __init__.py  create_cuts_features.py  distributions_cleaning.py  merge.py
src/bearplanes/strategies/intraday_residuals/: intraday_residual_replication.ipynb  intraday_residuals.py
src/bearplanes/utils/: __init__.py  adjustment.py  compustat_fields_utility.py  config.py  describe_dataframes.py  optimize_datatypes.py  paths.py  polygon_datetime.py
tests/data/: __init__.py
tests/data/wrds/: __init__.py  test_config_file.py
trading/: CMakeLists.txt  CMakePresets.json  vcpkg.json
trading/src/: Position.h  TradingClient.cpp  TradingClient.h  main.cpp
trading/src/accountLevel/: AccountRepository.h  AccountState.h
trading/src/markdowns/: dataFlow.md  learningTheApi.md  notes.md
