[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bearplanes"
version = "0.1.0"
description = "toml file for trading project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=13.0.0",
    "aiohttp>=3.13.0",
    "aiohttp-ratelimiter>=4.1.3",
    "boto3>=1.35.0",
    "databento>=0.64.0",
    "numpy>=2.3.3",
    "pandas>=2.2.0,<2.3",
    "polygon>=1.2.8",
    "polygon-api-client>=1.13.0",
    "python-dotenv>=1.1.1",
    "ratelimiter>=1.2.0.post0",
    "requests>=2.32.5",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "matplotlib>=3.9.0",
    "scipy>=1.11.0",
    "wrds>=3.4.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
]
